--- a/photographer.html
+++ b/photographer.html
@@ -32,5 +32,6 @@
 			</div>
 		</div>
     <script src="/scripts/utils/contactForm.js"></script>
+    <script src="scripts/factories/profileFactories.js"></script>
   </body>
 </html>
