--- a/photographer.html
+++ b/photographer.html
@@ -35,5 +35,6 @@
 		</div>
     <script src="/scripts/utils/contactForm.js"></script>
     <script src="scripts/factories/profileFactories.js"></script>
+    <script src="/scripts/pages/pageProfile.js"></script>
   </body>
 </html>
