Mise en page Profile

--- a/photographer.html
+++ b/photographer.html
@@ -29,7 +29,7 @@
 						<label>Prénom</label>
 						<input />
 					</div>
-          <button class="contact_button">Envoyer</button>
+          <button class="submit">Envoyer</button>
 				</form>
 			</div>
 		</div>
