--- a/photographer.html
+++ b/photographer.html
@@ -17,6 +17,16 @@
       <div class="photograph-header">
         <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
       </div>
+      <div id="filtre">
+        <div id="Trier">Trier par</div>
+        <a class="menu_dropdown" aria-haspopup="true" aria-expanded="false" href="#">
+          <span class="menu_dropdown-content">
+          </span>
+        </a>
+      </div>
+      <div class="media">
+        
+      </div>
     </main>
     <div id="contact_modal">
 			<div class="modal">
