--- a/photographer.html
+++ b/photographer.html
@@ -24,8 +24,8 @@
           </span>
         </a>
       </div>
-      <div class="media">
-        
+      <div class="book">
+
       </div>
     </main>
     <div id="contact_modal">
@@ -45,6 +45,7 @@
 		</div>
     <script src="/scripts/utils/contactForm.js"></script>
     <script src="scripts/factories/profileFactories.js"></script>
+    <script scr="/scripts/factories/mediaFactories.js"></script>
     <script src="/scripts/pages/pageProfile.js"></script>
   </body>
 </html>
