--- a/photographer.html
+++ b/photographer.html
@@ -24,7 +24,7 @@
           </span>
         </a>
       </div>
-      <div class="book">
+      <div class="gallery-section">
 
       </div>
     </main>
@@ -44,8 +44,8 @@
 			</div>
 		</div>
     <script src="/scripts/utils/contactForm.js"></script>
+    <script src="/scripts/factories/mediaFactories.js"></script>
     <script src="scripts/factories/profileFactories.js"></script>
-    <script scr="/scripts/factories/mediaFactories.js"></script>
     <script src="/scripts/pages/pageProfile.js"></script>
   </body>
 </html>
