--- a/photographer.html
+++ b/photographer.html
@@ -20,7 +20,7 @@
       <div id="filtre">
         <div id="Trier">Trier par</div>
         <a class="menu_dropdown" aria-haspopup="true" aria-expanded="false" href="#">
-          <span class="menu_dropdown-content">
+          <span id="content">
           </span>
         </a>
       </div>
