Menu Dropdown  fleche correction

--- a/photographer.html
+++ b/photographer.html
@@ -20,7 +20,7 @@
       <div id="filtre">
         <label id="label_trier">Trier par</label>
         <div id="menu_dropdown" aria-expanded="false" href="#">
-        <button aria-labelledby="order-button" aria-label="Order by" id="btDropdown" class="btDropdown">Populartité</button>
+        <button aria-labelledby="order-button" aria-label="Order by" id="btDropdown" class="btDropdown">Popularité</button>
           <div id="dropdownContent" class="dropdown-content">
             <p class="dropdownItem" id="dropdownFirst" tabindex="0" onkeypress="dropdownFc()">Popularité</p>
             <p class="dropdownItem" tabindex="0" onkeypress="dropdownFc()">Date</p>
