--- a/photographer.html
+++ b/photographer.html
@@ -22,9 +22,9 @@
         <div id="menu_dropdown" aria-expanded="false" href="#">
         <button aria-labelledby="order-button" aria-label="Order by" id="btDropdown" class="btDropdown">Popularité</button>
           <div id="dropdownContent" class="dropdown-content">
-            <p class="dropdownItem" id="dropdownFirst" tabindex="0" onkeypress="dropdownFc()">Popularité</p>
-            <p class="dropdownItem" tabindex="0" onkeypress="dropdownFc()">Date</p>
-            <p class="dropdownItem" tabindex="0" onkeypress="dropdownFc()">Titre</p>
+            <p class="dropdownItem" id="dropdownFirst popularity" tabindex="0" onkeypress="dropdownFc()">Popularité</p>
+            <p class="dropdownItem" id="date" tabindex="0" onkeypress="dropdownFc()">Date</p>
+            <p class="dropdownItem" id="title" tabindex="0" onkeypress="dropdownFc()">Titre</p>
           </div>
         </div>
       </div>
