Mise en forme counter

--- a/photographer.html
+++ b/photographer.html
@@ -35,7 +35,7 @@
           <div id="totalLikesNumber">test</div>
           <img src="/assets/icons/heart.svg" alt="Likes" />
         </div>
-        <div class="priceDay"></div>
+        <div id="priceDay"></div>
       </div>
     </main>
     <div id="contact_modal">
