--- a/photographer.html
+++ b/photographer.html
@@ -22,9 +22,9 @@
         <div id="menu_dropdown" aria-expanded="false" href="#">
         <button aria-labelledby="order-button" aria-label="Order by" id="btDropdown" class="btDropdown">Popularité</button>
           <div id="dropdownContent" class="dropdown-content">
-            <p class="dropdownItem" id="dropdownFirst popularity" tabindex="0" data-filter="popularity">Popularité</p>
-            <p class="dropdownItem" id="date" tabindex="0" data-filter="date">Date</p>
-            <p class="dropdownItem" id="title" tabindex="0" data-filter="title">Titre</p>
+            <p class="dropdownItem" id="dropdownFirst popularity" tabindex="0" data-filter-type="review">Popularité</p>
+            <p class="dropdownItem" id="date" tabindex="0" data-filter-type="date">Date</p>
+            <p class="dropdownItem" id="title" tabindex="0" data-filter-type="title">Titre</p>
           </div>
         </div>
       </div>
