--- a/photographer.html
+++ b/photographer.html
@@ -1,62 +1,76 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
-    <meta charset="utf-8">
-    <link rel="icon" type="image/png" href="assets/favicon.png">
-    <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
-    <title>Fisheye - photographe </title>
-  </head>
-  <body>
-    <header>
-      <a href="./index.html">
+
+<head>
+  <link href="css/style.css" rel="stylesheet" type="text/css" />
+  <meta charset="utf-8">
+  <link rel="icon" type="image/png" href="assets/favicon.png">
+  <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
+  <title>Fisheye - photographe </title>
+</head>
+
+<body>
+  <header>
+    <a href="./index.html">
       <img src="assets/images/logo.png" class="logo" />
-      </a>
-    </header>
-    <main id="main">
-      <div class="photograph-header">
-        <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
-      </div>
-      <div id="filtre">
-        <label id="label_trier">Trier par</label>
-        <div id="menu_dropdown" aria-expanded="false" href="#">
-        <button aria-labelledby="order-button" aria-label="Order by" id="btDropdown" class="btDropdown">Popularité</button>
-          <div id="dropdownContent" class="dropdown-content">
-            <p class="dropdownItem" id="dropdownFirst popularity" tabindex="0" data-filter-type="review">Popularité</p>
-            <p class="dropdownItem" id="date" tabindex="0" data-filter-type="date">Date</p>
-            <p class="dropdownItem" id="title" tabindex="0" data-filter-type="title">Titre</p>
-          </div>
+    </a>
+  </header>
+  <main id="main">
+    <div class="photograph-header">
+      <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
+    </div>
+    <div id="filtre">
+      <label id="label_trier">Trier par</label>
+      <div id="menu_dropdown" aria-expanded="false" href="#">
+        <button aria-labelledby="order-button" aria-label="Order by" id="btDropdown"
+          class="btDropdown">Popularité</button>
+        <div id="dropdownContent" class="dropdown-content">
+          <p class="dropdownItem" id="dropdownFirst popularity" tabindex="0" data-filter-type="review">Popularité</p>
+          <p class="dropdownItem" id="date" tabindex="0" data-filter-type="date">Date</p>
+          <p class="dropdownItem" id="title" tabindex="0" data-filter-type="title">Titre</p>
         </div>
       </div>
-      <div class="gallery-section">
+    </div>
+    <div class="gallery-section">
+    </div>
+    <div id="likesAndPrice">
+      <div id="likes">
+        <div id="totalLikesNumber">test</div>
+        <img src="/assets/icons/heart.svg" alt="Likes" />
       </div>
-      <div id="likesAndPrice">
-        <div id="likes">
-          <div id="totalLikesNumber">test</div>
-          <img src="/assets/icons/heart.svg" alt="Likes" />
+      <div id="priceDay"></div>
+    </div>
+  </main>
+  <div id="contact_modal">
+    <div class="modal">
+      <header>
+        <h2>Contactez-moi</h2>
+        <h2 class="photographeName"></h2>
+        <img src="assets/icons/close.svg" onclick="closeModal()" />
+      </header>
+      <form>
+        <div>
+          <label>Prénom</label>
+          <input type="text" id="prenom_input" />
+          <div class="result" id="firstError"></div>
+          <label>Nom</label>
+          <input type="text" id="nom_input" />
+          <div class="result" id="lastError"></div>
+          <label>Email</label>
+          <input type="text" id="mail_input" />
+          <div class="result" id="mailError"></div>
+          <label>Votre message</label>
+          <input type="textarea" id="message_input" />
         </div>
-        <div id="priceDay"></div>
-      </div>
-    </main>
-    <div id="contact_modal">
-			<div class="modal">
-				<header>
-          <h2>Contactez-moi</h2>
-          <img src="assets/icons/close.svg" onclick="closeModal()" />
-        </header>
-				<form>
-					<div>
-						<label>Prénom</label>
-						<input />
-					</div>
-          <button class="submit">Envoyer</button>
-				</form>
-			</div>
-		</div>
-    <script src="scripts/factories/indexPhotographerFactories.js"></script>
-    <script src="/scripts/utils/contactForm.js"></script>
-    <script src="/scripts/factories/mediaFactories.js"></script>
-    <script src="scripts/factories/profileFactories.js"></script>
-    <script src="/scripts/pages/pageProfile.js"></script>
-  </body>
+        <button class="submit contact_button">Envoyer</button>
+      </form>
+    </div>
+  </div>
+  <script src="scripts/factories/indexPhotographerFactories.js"></script>
+  <script src="/scripts/utils/contactForm.js"></script>
+  <script src="/scripts/factories/mediaFactories.js"></script>
+  <script src="scripts/factories/profileFactories.js"></script>
+  <script src="/scripts/pages/pageProfile.js"></script>
+</body>
+
 </html>
