--- a/photographer.html
+++ b/photographer.html
@@ -44,8 +44,7 @@
   <div id="contact_modal">
     <div class="modal">
       <header>
-        <h2>Contactez-moi</h2>
-        <h2 class="photographeName"></h2>
+        <h2 class="modal-header"></h2>
         <img src="assets/icons/close.svg" onclick="closeModal()" />
       </header>
       <form>
