--- a/photographer.html
+++ b/photographer.html
@@ -69,7 +69,7 @@
   <script src="/scripts/utils/contactForm.js"></script>
   <script src="/scripts/factories/mediaFactories.js"></script>
   <script src="scripts/factories/profileFactories.js"></script>
-  <script src="/scripts/pages/pageProfile.js"></script>
+  <script src="/scripts/pages/pageProfile.js" type="module"></script>
 </body>
 
 </html>
