--- a/photographer.html
+++ b/photographer.html
@@ -23,7 +23,7 @@
       <label id="label_trier">Trier par</label>
       <div id="menu_dropdown" aria-expanded="false" href="#">
         <button aria-labelledby="order-button" aria-label="Order by" id="btDropdown"
-          class="btDropdown">Popularité</button>
+          class="btDropdown">Date</button>
         <div id="dropdownContent" class="dropdown-content">
           <p class="dropdownItem" id="dropdownFirst popularity" tabindex="0" data-filter-type="review">Popularité</p>
           <p class="dropdownItem" id="date" tabindex="0" data-filter-type="date">Date</p>
