--- a/photographer.html
+++ b/photographer.html
@@ -31,7 +31,7 @@
         </div>
       </div>
     </div>
-    <div class="gallery-section">
+    <div class="gallery-container">
     </div>
     <div id="likesAndPrice">
       <div id="likes">
