LightBox mise en forme OK 👍🏻

--- a/photographer.html
+++ b/photographer.html
@@ -33,6 +33,13 @@
     </div>
     <div class="gallery-container">
     </div>
+    <!-- <div class="lightbox-screen">
+       <div class="mediaShow"></div>
+        <button class="btClose btnScreenview">&times;</button>
+        <button class="btNext btnScreenview">&lsaquo;</button>
+        <button class="btPrev btnScreenview">&rsaquo;</button>
+        <p classe="mediaTitle">${mediaFocusTitle}</p>
+    </div> -->
     <div id="likesAndPrice">
       <div id="likes">
         <div id="totalLikesNumber">test</div>
@@ -70,6 +77,7 @@
   <script src="/scripts/factories/mediaFactories.js"></script>
   <script src="scripts/factories/profileFactories.js"></script>
   <script src="/scripts/pages/pageProfile.js" type="module"></script>
+  <script src="/scripts/utils/lightBox.js" type="module"></script>
 </body>
 
 </html>
