--- a/photographer.html
+++ b/photographer.html
@@ -79,7 +79,7 @@
   <script src="/scripts/factories/mediaFactories.js"></script>
   <script src="scripts/factories/profileFactories.js"></script>
   <script src="/scripts/pages/pageProfile.js" type="module"></script>
-  <script src="/scripts/utils/lightBox.js" type="module" defer></script>
+  <!-- <script src="/scripts/utils/lightBox.js" type="module" defer></script> -->
 </body>
 
 </html>
