--- a/photographer.html
+++ b/photographer.html
@@ -74,6 +74,10 @@
       </form>
     </div>
   </div>
+
+  <!-- <script src="/scripts/factories/models/MediaImage.js" type="module"></script>
+  <script src="/scripts/factories/utils/lightBox.js" type="module"></script> -->
+
   <script src="scripts/factories/indexPhotographerFactories.js"></script>
   <script src="/scripts/utils/contactForm.js"></script>
   <script src="/scripts/factories/mediaFactories.js"></script>
