--- a/photographer.html
+++ b/photographer.html
@@ -17,7 +17,7 @@
   </header>
   <main id="main">
     <div class="photograph-header">
-      <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
+      <button class="contact_button" aria-label="Contactez-moi" onclick="displayModal()">Contactez-moi</button>
     </div>
     <div id="filtre">
       <label id="label_trier">Trier par</label>
