--- a/photographer.html
+++ b/photographer.html
@@ -17,7 +17,7 @@
   </header>
   <main id="main">
     <div class="photograph-header">
-      <button class="contact_button" aria-label="Contactez-moi" onclick="displayModal()">Contactez-moi</button>
+      <button class="contact_button" aria-label="Contactez-moi">Contactez-moi</button>
     </div>
     <div id="filtre">
       <label id="label_trier">Trier par</label>
@@ -45,8 +45,8 @@
     <div class="modal-content">
       <header>
         <h2 class="modal-header">Header du formulaire</h2>
-        <button class="closeModalBt" tabindex="0">
-          <img src="assets/icons/close.svg" onclick="closeModal()" alt="Logo du bouton de fermeture du formulaire"/>
+        <button class="closeModalBt" tabindex="0" onclick="closeModal()">
+          <img src="assets/icons/close.svg" alt="Logo du bouton de fermeture du formulaire"/>
         </button>
         
       </header>
@@ -85,15 +85,10 @@
     </div>
   </div>
 
-  <!-- <script src="/scripts/factories/models/MediaImage.js" type="module"></script>
-  <script src="/scripts/factories/utils/lightBox.js" type="module"></script> -->
-
   <script src="scripts/factories/indexPhotographerFactories.js"></script>
   <script src="/scripts/utils/contactForm.js"></script>
-  <script src="/scripts/factories/mediaFactories.js"></script>
-  <script src="scripts/factories/profileFactories.js"></script>
+  <!-- <script src="/scripts/factories/mediaFactories.js"></script> -->
   <script src="/scripts/pages/pageProfile.js" type="module"></script>
-  <!-- <script src="/scripts/utils/lightBox.js" type="module" defer></script> -->
 </body>
 
 </html>
