--- a/photographer.html
+++ b/photographer.html
@@ -4,7 +4,7 @@
 <head>
   <link href="css/style.css" rel="stylesheet" type="text/css" />
   <meta charset="utf-8">
-  <link rel="icon" type="image/png" href="assets/favicon.png">
+  <link rel="icon" type="image/png" href="assets/images/logo.png">
   <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
   <title>Fisheye - photographe </title>
 </head>
@@ -85,9 +85,7 @@
     </div>
   </div>
 
-  <script src="scripts/factories/indexPhotographerFactories.js"></script>
   <script src="/scripts/utils/contactForm.js"></script>
-  <!-- <script src="/scripts/factories/mediaFactories.js"></script> -->
   <script src="/scripts/pages/pageProfile.js" type="module"></script>
 </body>
 
