--- a/photographer.html
+++ b/photographer.html
@@ -86,7 +86,7 @@
   </div>
 
   <script src="/scripts/utils/contactForm.js"></script>
-  <script src="/scripts/pages/pageProfile.js"></script>
+  <script src="/scripts/pages/pageProfile.js" type="module"></script>
 </body>
 
 </html>
