--- a/photographer.html
+++ b/photographer.html
@@ -85,8 +85,8 @@
     </div>
   </div>
 
-  <script src="/scripts/utils/contactForm.js"></script>
-  <script src="/scripts/pages/pageProfile.js" type="module"></script>
+  <script src="./scripts/utils/contactForm.js"></script>
+  <script src="./scripts/pages/pageProfile.js" type="module"></script>
 </body>
 
 </html>
