--- a/photographer.html
+++ b/photographer.html
@@ -4,7 +4,7 @@
 <head>
   <link href="css/style.css" rel="stylesheet" type="text/css" />
   <meta charset="utf-8">
-  <link rel="icon" type="image/png" href="assets/images/logo.png">
+  <link rel="icon" type="image/png" href="./assets/images/logo.png">
   <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
   <title>Fisheye - photographe </title>
 </head>
@@ -12,7 +12,7 @@
 <body tabindex="-1">
   <header>
     <a href="./index.html">
-      <img src="assets/images/logo.png" class="logo" alt="logo Fisheye"/>
+      <img src="./assets/images/logo.png" class="logo" alt="logo Fisheye"/>
     </a>
   </header>
   <main id="main">
@@ -36,7 +36,7 @@
     <div id="likesAndPrice">
       <div id="likes">
         <div id="totalLikesNumber">test</div>
-        <img src="/assets/icons/heart.svg" alt="Likes" />
+        <img src="./assets/icons/heart.svg" alt="Likes" />
       </div>
       <div id="priceDay"></div>
     </div>
@@ -46,7 +46,7 @@
       <header>
         <h2 class="modal-header">Header du formulaire</h2>
         <button class="closeModalBt" tabindex="0" onclick="closeModal()">
-          <img src="assets/icons/close.svg" alt="Logo du bouton de fermeture du formulaire"/>
+          <img src="./assets/icons/close.svg" alt="Logo du bouton de fermeture du formulaire"/>
         </button>
         
       </header>
